# list

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ForwardList.cpp  ForwardList.h  ForwardListIterator.cpp  ForwardListIterator.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  list.sln  list.vcxproj  list.vcxproj.filters  listf.vcxproj  listf.vcxproj.filters  main.cpp  run.bat
Debug/: listf.exe.recipe  listf.ilk  vc142.idb
Debug/listf.tlog/: CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  listf.lastbuildstate
